feat: добавлено имя для пользователя, регистрация вынеса в отдельный метод, авторизация через куки (#10)
