# internal/api/dto/user.go
@@ -6,7 +6,7 @@ import (
 
 type UserResponse models.User
 
-type SwitchPasswordRequest struct {
+type ChangePasswordRequest struct {
 	OldPassword string `json:"old_password" validate:"required,min=8,max=64"`
 	NewPassword string `json:"new_password" validate:"required,min=8,max=64,nefield=OldPassword"`
 }
